# AlKazBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  SESSION_HANDOFF.md  SETUP.md  TODO.md  alembic.ini  pyproject.toml  railway.toml  sber26-bot-SPEC.md
alembic/: env.py
alembic/versions/: 1033b73e2805_latin_keyword_variants.py  486b28e0b462_sticker_usage_log.py  7ad47bc5c495_seen_stickers_descriptions.py  8ac1b7763a40_trigger_keywords_seed.py  8d208fabd07a_voice_messages_table.py  8fe3ebe5800f_pending_ops_table.py  a1b2_0013_more_wake_words.py  b0f5e10ebf32_seen_stickers_table.py  b2c3_0014_kb_seed_karen_glossary.py  b4fbd8da6908_initial_schema.py  c1a0_0002_seed_partners_wallets.py  c3d4_0015_kb_seed_deal_math.py  d1a0_0004_seed_critical_kb.py  d4e5_0016_deal_math_fix_terminology.py  e2a0_0006_perf_indexes_and_kb.py  e5f6_0017_kb_expand_vocab_and_rules.py  e8e607e380f8_trigger_keywords_alkash_erzhan.py  f3a1_0012_kb_cleanup_and_pack_theme.py  g6h7_0018_client_balance_history_and_has_doverka.py  (+9 more)
scripts/: ack_manual_change.py  backup_db.py  entrypoint.py  load-secrets.sh  secrets.sh  transcribe_voices.py
src/: __init__.py  config.py  logging_setup.py
tests/: conftest.py  test_applier.py  test_applier_exchange_math.py  test_applier_fx.py  test_batcher.py  test_classifier.py  test_config.py  test_keyword_match.py  test_knowledge_dedup.py  test_log_redaction.py  test_media_context.py  test_pdf_gate.py  test_pdf_ingest.py  test_pending_ops_dedup.py  test_photo_gate.py  test_poa_validation.py  test_preview.py  test_reminders_quiet_window.py  test_report_formula.py  test_silent.py  test_voice_postprocess.py  test_voice_reply_to_bot.py  test_wakeword_mirror.py
инструкции/: README.md  МАТЕМАТИКА.md  СЕССИЯ_2026-04-19.md
(+82 files in other folders)
