[project]
name = "sber26-bot"
version = "0.1.0"
description = "Telegram management-accounting bot for the Sber26 processing crew"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Sber26" }]

dependencies = [
    "aiogram>=3.13,<4",
    "anthropic>=0.39,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "psycopg[binary]>=3.2,<4",   # sync driver used by Alembic migrations
    "alembic>=1.13,<2",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.5,<3",
    "httpx>=0.27,<1",
    "structlog>=24.4,<25",
    "sentry-sdk>=2.17,<3",
    "apscheduler>=3.10,<4",
    "python-dateutil>=2.9,<3",
    "tenacity>=9.0,<10",
    "orjson>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3.14,<4",
    "ruff>=0.7,<1",
    "mypy>=1.12,<2",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "RUF001",  # ambiguous cyrillic chars — we write Russian on purpose
    "RUF002",  # same, in docstrings
    "RUF003",  # same, in comments
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
